--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <div class="col-md-5 col-10 text-center mt-4">
                         <div class="card text-center bg-light">
                             <div class="card-header">
-                                Akad Nikah
+                                <strong>Akad Nikah</strong>
                             </div>
                             <div class="card-body" data-aos="zoom-out" data-aos-duration="1500">
                                 <div class="row justify-content-center">
@@ -177,7 +177,7 @@
                     <div class="col-md-5 col-10 text-center mt-4">
                         <div class="card text-center bg-light">
                             <div class="card-header">
-                                Resepsi Pernikahan
+                                <strong>Resepsi Pernikahan</strong>
                             </div>
                             <div class="card-body" data-aos="zoom-out" data-aos-duration="1500">
                                 <div class="row justify-content-center">
