--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <h3>Assalamu'alaikum Warahmatullaahi Wabarakaatuh</h3>
                         <p>Atas Rahmat Allah SWT, kami bermaksud menyelenggarakan acara Pernikahan. Merupakan suatu
                             kehormatan dan kebahagiaan bagi kami sekeluarga, apabila Bapak/Ibu/Saudara/i berkenan hadir
-                            dan memberikan doa restu kepada
+                            dan memberikan doa restu kepada:
                         </p>
                     </div>
                 </div>
