--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                                 </div>
                             </div>
                             <div class="card-footer text-body-secondary">
-                                <strong> Hanya dilaksanakan oleh keluarga inti</strong>
+                                <span>Hanya dilaksanakan oleh keluarga inti</span>
                             </div>
                         </div>
                     </div>
