--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                     <div class="col-md-8 col-10 text-center">
                         <span>Ungkapan tanda kasih</span>
                         <h2>Kirim Hadiah</h2>
-                        <p>Doa restu Bapak/Ibu sekalian merupakan karunia yang sangat berarti bagi kamu. Dan jika
+                        <p>Doa restu Bapak/Ibu sekalian merupakan karunia yang sangat berarti bagi kami. Dan jika
                             memberi merupakan ungkapan tanda kasih, Bapak/Ibu dapat memberi kado secara cashless. Terima
                             kasih</p>
 
